urban_heat/app/kube/destinationearth/prod.destinationearth.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urban-square-heat
  namespace: prod-urban-square-services
spec:
  progressDeadlineSeconds: 3600
  replicas: 1
  selector:
    matchLabels:
      app: urban-square-heat
  template:
    metadata:
      labels:
        app: urban-square-heat
    spec:
     containers:
      - name: backend
        image: murmurationsas/dashboard:urban-square-heat-a31ea016fbfb8fd65bad5eef3511bcb2a78a5bc6
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
     imagePullSecrets:
     - name: docker-hub

---

apiVersion: v1
kind: Service
metadata:
  name: urban-square-heat
  namespace: prod-urban-square-services
  labels:
    app: urban-square-heat
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: urban-square-heat
